# platform.core.api.recorder

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  capi-media-recorder.pc.in  project.config  tags
TC/: _export_env.sh  _export_target_env.sh  build.sh  clean.sh  config.default  execute.sh  tet_scen  tetbuild.cfg  tetclean.cfg
TC/testcase/: Makefile  tslist  utc_media_recorder.c  utc_media_recorder_callback.c  utc_media_recorder_lifecycle.c  utc_media_recorder_working.c
debian/: changelog  control  rules
doc/: recorder_doc.h
include/: recorder.h  recorder_private.h
packaging/: capi-media-recorder.spec
src/: recorder.c
test/: CMakeLists.txt  multimedia_recorder_test.c  recorder_test.c
